full_build.txt
cargo : warning: 
profiles for the non 
root package will be 
ignored, specify 
profiles at the 
workspace root:
At line:1 char:1
+ cargo build --release 
--target 
wasm32-unknown-unknown 
2>&1 | Out-File ...
+ ~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~
    + CategoryInfo      
        : NotSpecified  
  : (warning: profil.   
 ..workspace root::S    
tring) [], RemoteEx    
ception
    + FullyQualifiedErr 
   orId : NativeComman  
  dError
 
package:   C:\Users\ADMI
N\Desktop\remmy-drips\Re
mitwise-Contracts\orches
trator\Cargo.toml
workspace: C:\Users\ADMI
N\Desktop\remmy-drips\Re
mitwise-Contracts\Cargo.
toml
   Compiling 
bill_payments v0.1.0 (C:
\Users\ADMIN\Desktop\rem
my-drips\Remitwise-Contr
acts\bill_payments)
   Compiling reporting 
v0.1.0 (C:\Users\ADMIN\D
esktop\remmy-drips\Remit
wise-Contracts\reporting
)
   Compiling 
remittance_split v0.1.0 
(C:\Users\ADMIN\Desktop\
remmy-drips\Remitwise-Co
ntracts\remittance_split
)
error: mismatched 
closing delimiter: `}`
   --> bill_payments\src
\lib.rs:450:29
    |
383 |     ) -> 
Result<u32, Error> {
    |                   
          - closing 
delimiter possibly 
meant for this
...
450 |         
env.events().publish(
    |                   
          ^ unclosed 
delimiter
...
462 |     }
    |     ^ mismatched 
closing delimiter

error: mismatched 
closing delimiter: `}`
   --> bill_payments\src
\lib.rs:531:29
    |
464 |     pub fn 
pay_bill(env: Env, 
caller: Address, 
bill_id: u32) -> 
Result<(), Error> {
    |                   
                        
                        
                - 
closing delimiter 
possibly meant for this
...
531 |         
env.events().publish(
    |                   
          ^ unclosed 
delimiter
...
543 |     }
    |     ^ mismatched 
closing delimiter

error: this file 
contains an unclosed 
delimiter
    --> bill_payments\sr
c\lib.rs:2571:3
     |
 113 | pub enum 
BillEvent {
     |                  
  - unclosed delimiter
...
 129 | impl 
BillPayments {
     |                  
 - unclosed delimiter
...
 769 |     pub fn 
get_all_bills(env: Env) 
-> Vec<Bill> {
     |                  
                        
       - this delimiter 
might not be properly 
closed...
...
1369 | }
     | - ...as it 
matches this but it has 
different indentation
...
2571 | }
     |  ^

error: could not 
compile `bill_payments` 
(lib) due to 3 previous 
errors
warning: build failed, 
waiting for other jobs 
to finish...
error[E0433]: failed to 
resolve: could not find 
`testutils` in 
`soroban_sdk`
   --> remittance_split\
src\lib.rs:972:22
    |
972 |     use soroban_sd
k::testutils::storage::I
nstance as _;
    |                   
   ^^^^^^^^^ could not 
find `testutils` in 
`soroban_sdk`
    |
note: found an item 
that was configured out
   --> C:\Users\ADMIN\.c
argo\registry\src\index.
crates.io-1949cf8c6b5b55
7f\soroban-sdk-21.7.7\sr
c\lib.rs:818:9
    |
818 | pub mod testutils;
    |         ^^^^^^^^^
    |
   ::: C:\Users\ADMIN\.c
argo\registry\src\index.
crates.io-1949cf8c6b5b55
7f\soroban-sdk-21.7.7\sr
c\testutils.rs:1:11
    |
  1 | #![cfg(any(test, 
feature = "testutils"))]
    |           --------
--------------------- 
the item is gated here

error[E0432]: 
unresolved import 
`soroban_sdk::testutils`
   --> remittance_split\
src\lib.rs:973:22
    |
973 |     use soroban_sd
k::testutils::{Address 
as _, Events, Ledger, 
LedgerInfo};
    |                   
   ^^^^^^^^^ could not 
find `testutils` in 
`soroban_sdk`
    |
note: found an item 
that was configured out
   --> C:\Users\ADMIN\.c
argo\registry\src\index.
crates.io-1949cf8c6b5b55
7f\soroban-sdk-21.7.7\sr
c\lib.rs:818:9
    |
818 | pub mod testutils;
    |         ^^^^^^^^^
    |
   ::: C:\Users\ADMIN\.c
argo\registry\src\index.
crates.io-1949cf8c6b5b55
7f\soroban-sdk-21.7.7\sr
c\testutils.rs:1:11
    |
  1 | #![cfg(any(test, 
feature = "testutils"))]
    |           --------
--------------------- 
the item is gated here

warning: unused import: 
`super::*`
   --> remittance_split\
src\lib.rs:971:9
    |
971 |     use super::*;
    |         ^^^^^^^^
    |
help: if this is a test 
module, consider adding 
a `#[cfg(test)]` to the 
containing module
   --> remittance_split\
src\lib.rs:970:1
    |
970 | mod test {
    | ^^^^^^^^
    = note: `#[warn(unus
ed_imports)]` (part of 
`#[warn(unused)]`) on 
by default

warning: unused import: 
`soroban_sdk::TryFromVal
`
   --> remittance_split\
src\lib.rs:974:9
    |
974 |     use 
soroban_sdk::TryFromVal;
    |         
^^^^^^^^^^^^^^^^^^^^^^^
    |
help: if this is a test 
module, consider adding 
a `#[cfg(test)]` to the 
containing module
   --> remittance_split\
src\lib.rs:970:1
    |
970 | mod test {
    | ^^^^^^^^

Some errors have 
detailed explanations: 
E0432, E0433.
For more information 
about an error, try 
`rustc --explain E0432`.
warning: 
`remittance_split` 
(lib) generated 2 
warnings
error: could not 
compile 
`remittance_split` 
(lib) due to 2 previous 
errors; 2 warnings 
emitted
